--- a/templates/dreamfactory-ingress.yaml
+++ b/templates/dreamfactory-ingress.yaml
@@ -25,7 +25,7 @@ spec:
     http:
       paths:
       - path: /
-        pathType: Prefix
+        pathType: {{ $.Values.dreamfactory.ingress.pathType }}
         backend:
           service:
             name: {{ include "dreamfactory.fullname" $ }}
