added wrapper if for gce items if ingress is disabled

--- a/templates/dreamfactory-gce-ingress.yaml
+++ b/templates/dreamfactory-gce-ingress.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.dreamfactory.ingress.enabled }}
 {{- if and (eq .Values.dreamfactory.ingress.ingressClass "gce") (not .Values.dreamfactory.ingress.tls) }}
 apiVersion: networking.gke.io/v1
 kind: ManagedCertificate
@@ -19,4 +20,5 @@ spec:
   redirectToHttps:
     enabled: true
     responseCodeName: MOVED_PERMANENTLY_DEFAULT
+{{- end}}
 {{- end}}
