--- a/values.yaml
+++ b/values.yaml
@@ -7,7 +7,8 @@ dreamfactory:
       - example.dreamfactory.com
     tls: true
     pathType: Prefix
-
+  env:
+    licensekey: {} # Populate if you have a license key
 
   image:
     repository: dreamfactorysoftware/dreamfactory
